--- a/index.css
+++ b/index.css
@@ -5,22 +5,19 @@ body{
     font-family:Helvetica;
     background-size:cover;
 }
-div{
-    display:inline-block;
-}
 .center{
     text-align:center;
 }
 .box{
     border:1px solid black;
     background-color:white;
-    padding:5px
+    padding:5px;
+    overflow:hidden;
+    height:500px;
 }
 .leftdiv{
     width:40%;
-    height:500px;
     margin-right:10%;
-    overflow:hidden;
 }
 .rightdiv{
     width:39%;
@@ -30,4 +27,7 @@ div{
 }
 .indent{
     text-indent:20px;
+}
+.padit{
+    padding:10px;
 }
